--- a/visualizer/backend/package.json
+++ b/visualizer/backend/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "sqlite3": "^5.1.7"
+    "net-snmp": "^3.19.0",
+    "snmp-native": "^1.2.0",
+    "sqlite3": "^5.1.7",
+    "ssh2": "^1.16.0",
+    "telnet-client": "^2.2.5",
+    "telnet-engine": "^1.2.5",
+    "telnet-stream": "^1.1.0"
   }
 }
